syntax = "proto3";

option go_package = "github.com/silverflin/go-grpc";

package proto;


message Product {
    string id = 1;
    string name = 2;
    string image_url = 3;
    string details = 4;
}

message MarketPrice {
    string market_name = 1;
    float price = 2;
    string id = 3;
}

service Products{
    rpc GetProductsByPrice(ProductListRequest) returns (CompareProductList){}
    rpc GetProducts(Empty) returns (ProductList){}
    rpc GetProductById(ProductByIdRequest) returns (Product) {}
    rpc GetCompareProductListById(ProductByIdRequest) returns (CompareProductList) {}
    rpc UpdateProductPrice(UpdateProductPriceRequest) returns (Empty) {}
}

message ProductByIdRequest {
    string product_id = 1;
}

message ProductListRequest {
    string product_name = 1;
}

message UpdateProductPriceRequest {
    string market_id = 1;
    Product product = 2;
    float new_price = 3;
}

message Empty {}

message ProductList {
    repeated Product product = 1;
}

message CompareProductList {
    Product product = 1;
    repeated MarketPrice prices = 2;
}
